<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAkash"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutAD"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectme"
        android:textColor="@color/black"
        android:padding="3dp"
        android:layout_marginStart="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGmailAboutMe"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:background="@drawable/gmail"
            android:layout_marginStart="35dp"/>

        <Button
            android:id="@+id/btnLinkedIn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:background="@drawable/linkedin"/>

    </LinearLayout>


</LinearLayout>