<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".About">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/black"
            android:fontFamily="casual"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/aboutbg"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/lightGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/darkblack"
            android:text="@string/connect"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWhatsAppAbout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/whatsapp"/>

            <TextView
                android:id="@+id/tvWhatsAppAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/grey"
                android:text="@string/wasp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/lightGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMessageAbout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/messaging"/>

            <TextView
                android:id="@+id/tvMessageAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/grey"
                android:text="@string/messageus"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/lightGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGmailAbout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/gmail"/>

            <TextView
                android:id="@+id/tvMailAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/grey"
                android:text="@string/gmail"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/lightGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/android"/>

            <TextView
                android:id="@+id/tvAkash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/grey"
                android:text="@string/aboutme"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>