<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:id="@+id/llproductInfo"
    tools:context=".ProductInfo">

    <technolifestyle.com.imageslider.FlipperLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/flipper_layout"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_height="200dp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black">

    </View>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="Name here"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="serif"
        android:text="@string/only"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvPriceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="price"
        android:textColor="@color/priceColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:padding="10sp"
        android:background="@drawable/border_thin"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvTypeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="size"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvSizeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="size"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuantityInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userQuantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:inputType="number"
            android:text="1"
            />

    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="7dp"-->
        <!--android:fontFamily="serif"-->
        <!--android:text="@string/available_color"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="15sp"-->
        <!--android:textStyle="italic" />-->

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeOrder"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_file"
        android:textColor="#fff"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif"
        android:text="@string/enquiry"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic|bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

</LinearLayout>
</ScrollView>